# nprs

./: .gitignore  Cargo.toml  README.md
effects/: ascii.nprs  bloom.nrps  contrast-adaptive-sharpness.nprs  kuwahara.nprs  mosaic.nprs  palette_swap.nprs  recolor.nprs  sharpness.nprs  stipple.nprs
effects/dog/: color-pencil.nprs  cross-hatching.nprs  quantize.nprs
examples/: basic.rs  custom_pass.nprs  custom_pass.rs
nprs_derive/: Cargo.toml
nprs_derive/src/: lib.rs  parse_pass.rs  parsed_value.rs  pass.rs
render_graphs/: kuwahara.nprs  luminance.nprs
render_graphs/dog/: color-pencil.nprs  cross-hatching.nprs  edge-detect.nprs
src/: image.rs  lib.rs  main.rs  parser.rs  pixel.rs  render_graph.rs
src/image/: format.rs  mod.rs  sampler.rs  wrap_mode.rs
src/image/pixel/: luma.rs  luma_alpha.rs  mod.rs  ops.rs  rgb.rs  rgba.rs
src/parser/: ast.rs  cli.rs  grammar.lalrpop  interpreter.rs  mod.rs  parse_primitives.rs
src/pass/: ascii.rs  blend.rs  bloom.rs  box_blur.rs  crt.rs  gaussian_blur.rs  kuwahara.rs  luminance.rs  merge.rs  mod.rs  palette_swap.rs  recolor.rs  sharpness.rs  sobel.rs  texture.rs  voronoi.rs
src/pass/blur/: box_blur.rs  gaussian_blur.rs  mod.rs
src/pass/difference_of_gaussians/: aa.rs  blur1.rs  mod.rs  simple.rs  threshold.rs
src/pass/tfm/: mod.rs  sobel.rs  structure_tensor.rs
