[package]
name = "nprs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "nprs_derive" ]

[dependencies]
nprs_derive = { path = "nprs_derive" }

inventory = "0.3.15"
glam = { version = "0.29.2", features = [ "rand", "serde" ] }
png = "0.17.13"
half = "2.4.1"
thiserror = "2.0.0"
voronoi = "0.1.4"
rand = "0.8.5"
radsort = "0.1.1"
rayon = "1.10.0"
clap = { version = "4.5.21", features = [ "derive" ] }
lalrpop-util = { version = "0.22.0", features = [ "lexer", "unicode" ] }

[build-dependencies]
lalrpop = "0.22.0"

[profile.dev]
incremental = false

[profile.release]
codegen-units = 1
